--- a/style.css
+++ b/style.css
@@ -26,3 +26,5 @@ div.navbord:hover{
 }
 
 https://github.com/web-pal/react-trello-board/tree/master/src/containers/Board
+https://github.com/web-pal/react-trello-board/tree/master/src/containers/Board/Cards
+https://github.com/web-pal/react-trello-board
