--- a/Cards.css
+++ b/Cards.css
@@ -3,7 +3,7 @@ div.cmMainDiv{
     padding: 2.5%;
     /* size: 80%; */
     min-height: 520px;
-    min-width: 750px;
+    min-width: 770px;
     
 }
 div.cmTitle{
@@ -61,7 +61,7 @@ div.cmbtn{
     display: block;
     font-weight: 700;
     height: 32px;
-    width: 130px;
+    width: 150px;
     margin-top: 8px;
     max-width: 300px;
     overflow: hidden;
@@ -81,4 +81,59 @@ div.cmbtn{
 }
 div.cmbtn:hover{
     background: #e0e2e4;
+}
+div .cmbtn1{
+    background-color:  #e7604e ;
+    box-shadow: 0 1px 0 0 rgba(9,45,66,.13);
+    border: none;
+    border-radius: 3px;
+    box-sizing: border-box;
+    cursor: pointer;
+    display: block;
+    font-weight: 700;
+    height: 32px;
+    width: 150px;
+    margin-top: 8px;
+    color: #e0e2e4;
+    max-width: 300px;
+    overflow: hidden;
+    padding: 6px 8px;
+    position: relative;
+    text-decoration: none;
+    text-overflow: ellipsis;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    white-space: nowrap;
+    transition-property: background-color,border-color,box-shadow;
+    transition-duration: 85ms;
+    transition-timing-function: ease;
+}
+div.cmbtn1:hover{
+    background: #d33934 ;
+}
+div.cmCommTitle{
+    margin-left: 35px;
+    font-weight: bold;
+}
+div.cmSubcomm{
+    
+    margin-left: 35px;
+}
+div.cmSubdel{
+    
+    margin-bottom: 2.5%;
+    margin-left: 35px;
+    font-size: 13px;
+    color:#6b778c;
+    text-decoration: underline;
+
+}
+div.cmSubdel:hover{
+    color:#172b4d;
+    cursor: pointer;
+}
+div.commentMain{
+    border-bottom: #6b778c
 }
